demo page: fix input color on mobile and fix svg properties

--- a/src/components/QRCodeDemo.css
+++ b/src/components/QRCodeDemo.css
@@ -81,6 +81,7 @@
   height: 37px;
   padding: 0;
   cursor: pointer;
+  border-radius: 0;
 }
 
 .form-input:focus {
